--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -45,6 +45,9 @@
   PB_SCA_Building_The_Washington_Monument:0 "Building The Washington Monument"
 
   PB_SCA_The_Great_Leap_Forward:0 "The Great Leap Forward"
+  PB_SCA_The_Great_Leap_Forward_1:0 "The Great Leap Forward"
+  PB_SCA_The_Great_Leap_Forward_2:0 "The Great Leap Forward"
+  PB_SCA_The_Great_Leap_Forward_3:0 "The Great Leap Forward"
 
   PB_Universal_Higher_SCA:0 "Subsidized Higher Education"
   PB_Universal_Basic_SCA:0 "Subsidized Basic Education"
@@ -138,6 +141,31 @@
   SCA_Incite_Rev_In_OSA:0 "[OSA.GetFlag] Incite Revolution in [OSA.GetName]"
   SCA_Incite_Rev_In_DER:0 "[DER.GetFlag] Incite Revolution in [DER.GetName]"
   SCA_Incite_Rev_In_STA:0 "[STA.GetFlag] Incite Revolution in [STA.GetName]"
+  SCA_Core_892:0 "Core East Interior Territory"
+  SCA_Core_895:0 "Core East Oregon"
+  SCA_Core_899:0 "Core North Sierra Nevada"
+  SCA_Core_900:0 "Core Central Sierra Nevada"
+  SCA_Core_901:0 "Core East Sierra Nevada"
+  SCA_Core_799:0 "Core South Sierra Nevada"
+  SCA_Core_902:0 "Core Imperio Del Interior"
+  SCA_Core_906:0 "Core Brigham"
+  SCA_Core_380:0 "Core Nuuchiu"
+  SCA_Core_905:0 "Core Santa Anna"
+  SCA_Core_377:0 "Core Apacheria"
+  SCA_Core_797:0 "Core Arapaho"
+  SCA_Core_904:0 "Core Nephia"
+  SCA_Core_894:0 "Core Northbasin"
+  SCA_Core_881:0 "Core Rockefeller"
+  SCA_Core_796:0 "Core Yooto"
+  SCA_Core_903:0 "Core Iturbide Mountains"
+  SCA_Core_908:0 "Core East Iturbide"
+  SCA_Core_376:0 "Core Kiowa"
+  SCA_Core_374:0 "Core Oclehumme"
+  SCA_Core_382:0 "Core Kkaze"
+  SCA_Core_384:0 "Core Pawnee"
+  SCA_Core_944:0 "Core Norton"
+  SCA_Core_942:0 "Core Marooner"
+  SCA_Core_392:0 "Core Aiouez"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -537,7 +565,7 @@
 
   SCA_Reimagine_The_American_Dream_tt:0 "\nThis £GFX_decision_icon_small decision allows for the improvement of £GFX_territory_icon §HState Category Types§! and £GFX_infrastructure_texticon §HState Infrastructure§!"
 
-  SCA_The_Great_Leap_Forward_tt:0 "\nThis National Spirit will be §RRemoved§! upon our declaration of war on the United Commonwealth"
+  SCA_The_Great_Leap_Forward_tt:0 "\nThis National Spirit will be §RRemoved§! upon our declaration of war on the [AME.GetFlag] United Commonwealth"
 
   SCA_Builders_Education_tt:0 "The §YEffectiveness§! of the Education Policies will improve:\nBasic Education System:§G+2.50%§!\nSubsidized Basic Education:§G+2.00%§!\nSubsidized Higher Education:§G+5.00%§!"
 
@@ -550,9 +578,9 @@
 
   SCA_The_Tamed_Frontier_1_tt:0 "Three £GFX_decision_icon_small decisions will unlock allowing for the improvement of the §HTamed West§! National Spirit:\n\n"
 
-  SCA_The_Great_Leap_Forward_tt_2:0 "\n§HImportant Note§!:\n\nA lot of focuses apply bonuses to every controlled state so to get the most out of your industry focuses it might be wise to conquer nations first and then focus on expanding your industry, although to conquer these nations you will obviously need an industry. Be smart and wise with how you min-max the most out of your industry tree."
+  SCA_The_Great_Leap_Forward_tt_2:0 "\n§HImportant Note§!:\nA lot of focuses apply bonuses to every controlled state so to get the most out of your industry focuses it might be ideal to conquer nations first and then focus on expanding your industry."
 
-  SCA_Establish_The_Comittee_For_State_Security_tt:0 "\nChanges the £GFX_decision_icon_small §HWith Open Eyes§! mission timer to now last 100 days instead of 60"
+  SCA_Establish_The_Comittee_For_State_Security_tt:0 "£GFX_counter_intelligence  §HC.S.S§! will be unlocked as an Intelligance Agency\n\nChanges the £GFX_decision_icon_small §HWith Open Eyes§! mission timer to now last 100 days instead of 60\n\nAllows for the £GFX_territory_icon coring of liberated states under the £GFX_decision_icon_small §HA Truely American Revolution decisions§!"
  
   SCA_Portland_Said_Yes:0 "[TAC.getflag] Portland agreed to our demands"
   SCA_New_Walden_Said_Yes:0 "[NWA.getflag] New Walden agreed to our demands"
@@ -563,6 +591,8 @@
   SCA_Recently_Declared_War_Rev_flag:0 "Has not been at war in the last 40 days"
 
   SCA_The_All_American_Reclamation_Committee_tt:0 "\nAllows for the ability to £GFX_pol_violence §RIncite Revolutions§! in various minor North American nations."
+  
+  SCA_The_Great_Leap_Forward_tt_3:0 "This national spirit will §GNo Longer§! be removed when we declare war on the [AME.GetFlag] United Commonwealth\n\n"
   
   ##########################
   # EVENTS
