--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -958,6 +958,12 @@
   French_postwar.11.b:0 "Establish a pro-French government, but take Romande"
   French_postwar.11.c:0 "Switzerland is an important business partner"
 
+  French_postwar.12.t:0 "Pressure Egypt"
+  French_postwar.12.d:0 "Egypt has long been under Anglo influence and whilst our nation has long contested London over their unrightful rule we have never truely had an oppurtunity like this to seize the moment and take what is rightfully ours, if we so dare."
+  French_postwar.12.a:0 "Force them under our sphere"
+  French_postwar.12.b:0 "Respect their independence"
+
+
   ##########################
   # IDEAS
   ##########################
@@ -1679,6 +1685,8 @@
   PB_FRA_Subject_Switzerland_desc:0 "Switzerland has long remained neutral to both European and global affairs but there very presence poses a threat to the French state and her allies."
   PB_FRA_Piedmont_Conference:0 "[IST.GetFlag] Subject: Piedmont Conference"
   PB_FRA_Piedmont_Conference_desc:0 "Savoy and Nice are home to thousands of proud and loyal Frenchman housed under an Italian banner. While the Italian state may be an ally of France the French people come first in state interests, politics comes second."
+  PB_FRA_Egypt:0 "[EGY.GetFlag] Subject: Egypt"
+  PB_FRA_Egypt_desc:0 "Egypt has long been under Anglo influence and whilst our nation has long contested London over their unrightful rule we have never truly had an opportunity like this to seize the moment and take what is rightfully ours, if we so dare."
 
   PB_FRA_Fund_The_Steelworks_Cat:0 "Heavy Industry Planning"
   PB_FRA_Fund_The_Steelworks_Cat_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
