--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -880,8 +880,8 @@
  EGY_ni_DEF:0 "The Kingdom of Egypt"
  EGY_ds:0 "Kingdom of Egypt"
  EGY_ds_DEF:0 "The Kingdom of Egypt"
- EGY_rc:0 "Kingdom of Egypt"
- EGY_rc_DEF:0 "The Kingdom of Egypt"
+ EGY_rc:0 "Egyptian Republic"
+ EGY_rc_DEF:0 "The Egyptian Republic"
  EGY_an:0 "Kingdom of Egypt "
  EGY_an_DEF:0 "The Kingdom of Egypt"
  EGY_cn:0 "Kingdom of Egypt"
@@ -4823,8 +4823,8 @@ SAN_an_ADJ:0 "Indian"
  MRT_cn_ADJ:0 "Mauritanian"
  MRT_an_ADJ:0 "Mauritanian"
 
- SEN_ni:0 "Wolofia"
- SEN_ni_DEF:0 "The Wolof Republic"
+ SEN_ni:0 "National State of Selibaby"
+ SEN_ni_DEF:0 "The National State of Selibaby"
  SEN_ds:0 "Wolofia"
  SEN_ds_DEF:0 "The Wolof Republic"
  SEN_rc:0 "Wolofia"
@@ -4850,8 +4850,8 @@ SAN_an_ADJ:0 "Indian"
 
  FUL_ni:0 "Fulani Republic"
  FUL_ni_DEF:0 "The Fulani Republic"
- FUL_ds:0 "Fulani Republic"
- FUL_ds_DEF:0 "The Fulani Republic"
+ FUL_ds:0 "Wassoulou Empire"
+ FUL_ds_DEF:0 "The Wassoulou Empire"
  FUL_rc:0 "Fulani Republic"
  FUL_rc_DEF:0 "The Fulani Republic"
  FUL_an:0 "Fulani Republic"
@@ -4887,13 +4887,13 @@ SAN_an_ADJ:0 "Indian"
  SIE_lb_DEF:0 "The Republic of Sierra Leone"
  SIE_ss:0 "Sierra Leone"
  SIE_ss_DEF:0 "The Republic of Sierra Leone"
- SIE_jc:0 "Sierra Leone"
- SIE_jc_DEF:0 "The Republic of Sierra Leone"
+ SIE_jc:0 "African Workers Republic"
+ SIE_jc_DEF:0 "The African Workers Republic"
  SIE_ni_ADJ:0 "Sierra Leonese"
  SIE_rc_ADJ:0 "Sierra Leonese"
  SIE_lb_ADJ:0 "Sierra Leonese"
  SIE_ss_ADJ:0 "Sierra Leonese"
- SIE_jc_ADJ:0 "Sierra Leonese"
+ SIE_jc_ADJ:0 "African"
  SIE_ds_ADJ:0 "Sierra Leonese"
  SIE_cn_ADJ:0 "Sierra Leonese"
  SIE_an_ADJ:0 "Sierra Leonese"
@@ -4950,8 +4950,8 @@ SAN_an_ADJ:0 "Indian"
 
  MLI_ni:0 "Mali Federation"
  MLI_ni_DEF:0 "The Mali Federation"
- MLI_ds:0 "Mali Federation"
- MLI_ds_DEF:0 "The Mali Federation"
+ MLI_ds:0 "Kingdom of Beni Abbas"
+ MLI_ds_DEF:0 "The Kingdom of Beni Abbas"
  MLI_rc:0 "Mali Federation"
  MLI_rc_DEF:0 "The Mali Federation"
  MLI_an:0 "Mali Federation"
