More Africa stuff

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -5356,8 +5356,8 @@ SAN_an_ADJ:0 "Indian"
  AZA_rc_DEF:0 "The Free People of Azandeland"
  AZA_an:0 "Azandeland"
  AZA_an_DEF:0 "The Free People of Azandeland"
- AZA_cn:0 "Azandeland"
- AZA_cn_DEF:0 "The Free People of Azandeland"
+ AZA_cn:0 "East African Federation"
+ AZA_cn_DEF:0 "The East African Federation"
  AZA_lb:0 "Azandeland"
  AZA_lb_DEF:0 "The Free People of Azandeland"
  AZA_ss:0 "Azandeland"
@@ -5525,7 +5525,7 @@ SAN_an_ADJ:0 "Indian"
 
  UGA_ni:0 "Buganda"
  UGA_ni_DEF:0 "The Kingdom of Buganda"
- UGA_ds:0 "Buganda"
+ UGA_ds:0 "Kingdom of Buganda"
  UGA_ds_DEF:0 "The Kingdom of Buganda"
  UGA_rc:0 "Buganda"
  UGA_rc_DEF:0 "The Kingdom of Buganda"
