--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -3104,22 +3104,22 @@
   DEN_Exile_cn_ADJ:0 "Danish"
   DEN_Exile_an_ADJ:0 "Danish"
 
-  FRA_WAF_ni:0 "Carnegia"
-  FRA_WAF_ni_DEF:0 "Carnegia"
-  FRA_WAF_ds:0 "Carnegia"
-  FRA_WAF_ds_DEF:0 "Carnegia"
-  FRA_WAF_rc:0 "Carnegia"
-  FRA_WAF_rc_DEF:0 "Carnegia"
-  FRA_WAF_an:0 "Carnegia"
-  FRA_WAF_an_DEF:0 "Carnegia"
-  FRA_WAF_cn:0 "Carnegia"
-  FRA_WAF_cn_DEF:0 "Carnegia"
-  FRA_WAF_lb:0 "Carnegia"
-  FRA_WAF_lb_DEF:0 "Carnegia"
-  FRA_WAF_ss:0 "Carnegia"
-  FRA_WAF_ss_DEF:0 "Carnegia"
-  FRA_WAF_jc:0 "Carnegia"
-  FRA_WAF_jc_DEF:0 "Carnegia"
+  FRA_WAF_ni:0 "Charlemagnia"
+  FRA_WAF_ni_DEF:0 "Charlemagnia"
+  FRA_WAF_ds:0 "Charlemagnia"
+  FRA_WAF_ds_DEF:0 "Charlemagnia"
+  FRA_WAF_rc:0 "Charlemagnia"
+  FRA_WAF_rc_DEF:0 "Charlemagnia"
+  FRA_WAF_an:0 "Charlemagnia"
+  FRA_WAF_an_DEF:0 "Charlemagnia"
+  FRA_WAF_cn:0 "Charlemagnia"
+  FRA_WAF_cn_DEF:0 "Charlemagnia"
+  FRA_WAF_lb:0 "Charlemagnia "
+  FRA_WAF_lb_DEF:0 "Charlemagnia"
+  FRA_WAF_ss:0 "Charlemagnia"
+  FRA_WAF_ss_DEF:0 "Charlemagnia"
+  FRA_WAF_jc:0 "Charlemagnia"
+  FRA_WAF_jc_DEF:0 "Charlemagnia"
   FRA_WAF_ni_ADJ:0 "Afro-European"
   FRA_WAF_rc_ADJ:0 "Afro-European"
   FRA_WAF_lb_ADJ:0 "Afro-European"
