SCA work and fixes

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -167,6 +167,22 @@
   SCA_Core_942:0 "Core Marooner"
   SCA_Core_392:0 "Core Aiouez"
 
+  PB_SCA_Seven_Deadly_Sins:0 "Seven Deadly Sins"
+  PB_SCA_Seven_Deadly_Sins_desc:0 "\n\n\n\n\n\nBoth Butler and Congress have agreed that a great cancer has befallen on our nation, and while the state holds no sympathetic views towards religious folk the state has decided that at the very least the sins that the corrupt dogma of Rome claims to be attempting to destroy could serve as a good baseline for our nation to build itself on.\n\n £red_skull_small   Embracement of Degeneracy Tier:  [get_PB_SCA_Deg]\n\n"
+  SCA_Degeneracy_SIX:0 "§RFive§!"
+  SCA_Degeneracy_Five:0 "§RFour§!"
+  SCA_Degeneracy_Four:0 "§RThree§!"
+  SCA_Degeneracy_Three:0 "§RTwo§!"
+  SCA_Degeneracy_Two:0 "§ROne§!"
+  SCA_Degeneracy_One:0 "§GZero§!"
+  PB_SCA_Deg_Icon_tt:0 "Our Current Degeneracy Tier is [get_PB_SCA_Deg]\n\n[get_PB_SCA_Deg_tt]"
+  SCA_Degeneracy_Six_tt:0 "At Tier §RFive§!:\n  - (Army Organisation Factor: §R-0.25%§!, Max Planning Factor: §R-0.30%§!, Surrender Limit: §R-0.50%§!, Likely Hood of Degeneracy Events Firing: §RVery High§!)."
+  SCA_Degeneracy_Five_tt:0 "At Tier §RFour§!:\n  - (Army Organisation Factor: §R-0.20%§!, Max Planning Factor: §R-0.25%§!, Surrender Limit: §R-0.40%§!, Likely Hood of Degeneracy Events Firing: §RHigh§!)"
+  SCA_Degeneracy_Four_tt:0 "At Tier §RThree§!:\n  - (Army Organisation Factor: §R-0.15%§!, Max Planning Factor: §R-0.20%§!, Surrender Limit: §R-0.30%§!, Likely Hood of Degeneracy Events Firing: §RAverage§!)."
+  SCA_Degeneracy_Three_tt:0 "At Tier §RTwo§!:\n  - (Army Organisation Factor: §R-0.10%§!, Max Planning Factor: §R-0.15%§!, Surrender Limit: §R-0.20%§!, Likely Hood of Degeneracy Events Firing: §RLow§!)"
+  SCA_Degeneracy_Two_tt:0 "At Tier §ROne§!:\n  - (Army Organisation Factor: §R-0.05%§!, Max Planning Factor: §R-0.10%§!, Surrender Limit: §R-0.10%§!, Likely Hood of Degeneracy Events Firing: §RVery Low§!)."
+  SCA_Degeneracy_One_tt:0 "At Tier §GZero§!:\n  - (All debuffs are removed and the Degeneracy Mechanic will end)."
+
   ##########################
   # DYNAMIC MODIFIERS
   ##########################
@@ -596,7 +612,7 @@
   
   SCA_The_Great_Leap_Forward_tt_3:0 "This national spirit will §GNo Longer§! be removed when we declare war on the [AME.GetFlag] United Commonwealth\n\n"
 
-  SCA_The_Seven_Deadly_Sins_tt:0 "Add §YSeven Deadly Sins§!, which grants\n(Daily Political Power Gain: §G+0.10§!, Stability: §G+5.00%§!).\n\nComplete £GFX_pol_power §HFocuses§! and £GFX_decision_icon_small §HDecisions§! to improve this National Spirit.\n\nBypass the following focuses:\n§YLust§!, §YGluttony§!, §YGreed§!, §YSloth§!, §YWrath§!, §YEnvy§!, §YPride§!"
+  SCA_The_Seven_Deadly_Sins_tt:0 "\nAdd §YSeven Deadly Sins§!, which grants\n(Daily Political Power Gain: §G+0.10§!, Stability: §G+5.00%§!).\n\nComplete £GFX_pol_power §HFocuses§! and £GFX_decision_icon_small §HDecisions§! to improve this National Spirit whilst dealing with the £red_skull_small  §RDegeneracy Mechanic§!\n\nBypass the following focuses:\n§YLust§!, §YGluttony§!, §YGreed§!, §YSloth§!, §YWrath§!, §YEnvy§!, §YPride§!"
 
   SCA_The_Patriotic_Family_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nWar Support: §G+5.00%§!\nDaily Political Power Gain: §G+0.10§!"
 
