--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -182,6 +182,9 @@
   SCA_Degeneracy_Three_tt:0 "At Tier §RTwo§!:\n  - (Army Organisation Factor: §R-0.10%§!, Max Planning Factor: §R-0.15%§!, Surrender Limit: §R-0.20%§!, Likely Hood of Degeneracy Events Firing: §RLow§!)"
   SCA_Degeneracy_Two_tt:0 "At Tier §ROne§!:\n  - (Army Organisation Factor: §R-0.05%§!, Max Planning Factor: §R-0.10%§!, Surrender Limit: §R-0.10%§!, Likely Hood of Degeneracy Events Firing: §RVery Low§!)."
   SCA_Degeneracy_One_tt:0 "At Tier §GZero§!:\n  - (All debuffs are removed and the Degeneracy Mechanic will end)."
+  SCA_Reinvigorate_The_Soul:0 "Reinvigorate The Soul"
+  SCA_Reinvigorate_The_Soul_tt:0 "Allows for the removal of the §RTraumatized By The Trek§! trait"
+
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -280,6 +283,8 @@
   trait_SCA_Heros_Of_The_Revolution_desc:0 ""
   trait_SCA_United_By_Ideology:0 "United By Ideology"
   trait_SCA_United_By_Ideology_desc:0 ""
+  trait_SCA_Traumatized_By_The_Trek:0 "Traumatized By The Trek"
+  trait_SCA_Traumatized_By_The_Trek_desc:0 "This general has seen the worst of the worst of our march west, many have died and for those that have made it, reports of Shell Shock are far from uncommon. The sight of corpses littering the path back to Philadelphia has done more mental damage than the UC could ever hope to military inflict, our people are tired, battered, and bruised. "
 
   PB_Revolutionary_With_A_Heart:0 "Revolutionary With A Heart"
 
