--- a/localisation/english/PB_bookmarks_l_english.yml
+++ b/localisation/english/PB_bookmarks_l_english.yml
@@ -18,4 +18,4 @@
  AME_PAX_BRITANNICA_DESC:0 "Coming In The Next Update"
  SCA_PAX_BRITANNICA_DESC:0 "Coming In The Next Update"
  MEX_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
- QUE_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
+ CAL_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
