--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1360,7 +1360,7 @@
   PB_FRA_Annex_Brittany:0 "March on Brest"
   PB_FRA_Annex_Brittany_desc:0 "The creation of Brittany is a national embarrassment to the French people. It is an abomination created by the Anglos following the treaty of Tours. We shall avenge this black mark on French history, by force if necessary."
   PB_FRA_Reintegrate_Brittany:0 "Decimate the Breton Nationalists"
-  PB_FRA_Reintegrate_Brittany_desc:0 "With our liberation of Brittany successful we now have the ardious task of convincing the people who still remain loyal to the government of Mordrel what once was, and what can still be. If they still decide to go with their Anglo inspired ways then we will have to liquidate them and any other conspirators."
+  PB_FRA_Reintegrate_Brittany_desc:0 "With our liberation of Brittany successful we now have the ardious task of convincing the people who still remain loyal to the government of Boucher what once was, and what can still be. If they still decide to go with their Anglo inspired ways then we will have to liquidate them and any other conspirators."
   PB_FRA_Strike_at_Wallonia:0 "Demand Wallonia"
   PB_FRA_Strike_at_Wallonia_desc:0 "Wallonia always has and always will be a core territory of France. Its fundemental existance is a threat to the French nation and it must be wiped off the map if we wish to truely be safe."
   PB_FRA_Reintegrate_Wallonia:0 "Purge the Wallonian Independence Leaders"
