--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -125,6 +125,8 @@
   SCA_Integrate_New_Walden:0 "Integrate New Walden"
   SCA_Integrate_Portland:0 "Integrate Portland"
 
+  # American Revolution
+
   PB_SCA_A_Truely_American_Revolution:0 "A Truely American Revolution"
   PB_SCA_A_Truely_American_Revolution_desc:0 "\n\n\n\n\n\nThe United Commonwealth sits far from our grasp, growing fat and complacent whilst our state readies itself for its greatest trial of dedication and will.\n\nBe aware of your nation's £GFX_SCA_AE Aggressive Expansion, the higher it gets the more neighbouring countries around you are inclined to send volunteers and equipment to any nation you may be at war with. Should it get too high some minor American nations may form a coalition against you."
   SCA_Incite_Rev_In_FRE:0 "[FRE.GetFlag] Incite Revolution in [FRE.GetName]"
@@ -167,6 +169,8 @@
   SCA_Core_942:0 "Core Marooner"
   SCA_Core_392:0 "Core Aiouez"
 
+  # Seven Deadly Sins
+
   PB_SCA_Seven_Deadly_Sins:0 "Seven Deadly Sins"
   PB_SCA_Seven_Deadly_Sins_desc:0 "\n\n\n\n\n\nBoth Butler and Congress have agreed that a great cancer has befallen on our nation, and while the state holds no sympathetic views towards religious folk the state has decided that at the very least the sins that the corrupt dogma of Rome claims to be attempting to destroy could serve as a good baseline for our nation to build itself on.\n\n £red_skull_small   Embracement of Degeneracy Tier:  [get_PB_SCA_Deg]\n\n"
   SCA_Degeneracy_SIX:0 "§RFive§!"
@@ -184,7 +188,12 @@
   SCA_Degeneracy_One_tt:0 "At Tier §GZero§!:\n  - (All debuffs are removed and the Degeneracy Mechanic will end)."
   SCA_Reinvigorate_The_Soul:0 "Reinvigorate The Soul"
   SCA_Reinvigorate_The_Soul_tt:0 "Allows for the removal of the §RTraumatized By The Trek§! trait"
-
+  SCA_Modernization_Efforts:0 "Modernization Efforts"
+  SCA_Modernization_Efforts_tt:0 "Allows for the improvement of the §HMilitary Modernization§! social policy"
+  SCA_Decrease_Deg_Tier_Progress_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §G+1§!."
+  SCA_The_Seven_Deadly_Sins_tt:0 "\nAdd §YSeven Deadly Sins§!, which grants\n(Daily Political Power Gain: §G+0.10§!, Stability: §G+5.00%§!).\n\nComplete £GFX_pol_power §HFocuses§! and £GFX_decision_icon_small §HDecisions§! to improve this National Spirit whilst dealing with the £red_skull_small  §RDegeneracy Mechanic§!\n\nBypass the following focuses:\n§YLust§!, §YGluttony§!, §YGreed§!, §YSloth§!, §YWrath§!, §YEnvy§!, §YPride§!"
+  SCA_The_Patriotic_Family_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nWar Support: §G+5.00%§!\nDaily Political Power Gain: §G+0.10§!"
+  SCA_The_Military_Readiness_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDivision Defense on core territory: §G+5.0%§!"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -448,8 +457,8 @@
   SCA_The_Civil_Policing_Act:0 "The Civil Policing Act"
   SCA_The_Civil_Policing_Act_desc:0 ""
 
-  SCA_The_Corruption_Prevention_Act:0 "The Corruption Prevention Act"
-  SCA_The_Corruption_Prevention_Act_desc:0 ""
+  SCA_The_Military_Readiness_Act:0 "The Military Readiness Act"
+  SCA_The_Military_Readiness_Act_desc:0 ""
 
   SCA_Envy:0 "Envy"
   SCA_Envy_desc:0 ""
@@ -616,10 +625,6 @@
   SCA_The_All_American_Reclamation_Committee_tt:0 "\nAllows for the ability to £GFX_pol_violence §RIncite Revolutions§! in various minor North American nations."
   
   SCA_The_Great_Leap_Forward_tt_3:0 "This national spirit will §GNo Longer§! be removed when we declare war on the [AME.GetFlag] United Commonwealth\n\n"
-
-  SCA_The_Seven_Deadly_Sins_tt:0 "\nAdd §YSeven Deadly Sins§!, which grants\n(Daily Political Power Gain: §G+0.10§!, Stability: §G+5.00%§!).\n\nComplete £GFX_pol_power §HFocuses§! and £GFX_decision_icon_small §HDecisions§! to improve this National Spirit whilst dealing with the £red_skull_small  §RDegeneracy Mechanic§!\n\nBypass the following focuses:\n§YLust§!, §YGluttony§!, §YGreed§!, §YSloth§!, §YWrath§!, §YEnvy§!, §YPride§!"
-
-  SCA_The_Patriotic_Family_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nWar Support: §G+5.00%§!\nDaily Political Power Gain: §G+0.10§!"
 
   ##########################
   # EVENTS
