--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -193,7 +193,14 @@
   SCA_Decrease_Deg_Tier_Progress_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §G+1§!."
   SCA_The_Seven_Deadly_Sins_tt:0 "\nAdd §YSeven Deadly Sins§!, which grants\n(Daily Political Power Gain: §G+0.10§!, Stability: §G+5.00%§!).\n\nComplete £GFX_pol_power §HFocuses§! and £GFX_decision_icon_small §HDecisions§! to improve this National Spirit whilst dealing with the £red_skull_small  §RDegeneracy Mechanic§!\n\nBypass the following focuses:\n§YLust§!, §YGluttony§!, §YGreed§!, §YSloth§!, §YWrath§!, §YEnvy§!, §YPride§!"
   SCA_The_Patriotic_Family_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nWar Support: §G+5.00%§!\nDaily Political Power Gain: §G+0.10§!"
-  SCA_The_Military_Readiness_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDivision Defense on core territory: §G+5.0%§!"
+  SCA_The_Military_Readiness_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDivision Defense on core territory: §G+5.0%§!\n\n"
+  SCA_SCA_The_Commune_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nConstruction Speed: §G+5.00%§!\n\n"
+  SCA_Extort_Citizens:0 "Extort Citizens"
+  SCA_Extort_Citizens_tt:0 "Allows for the ability to obtain certain riches (§HPolitical Power§!) from citizens that own too much"
+  SCA_The_Property_Ownership_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDaily Political Power Gain: §G+0.20§!\nStability: §R-5.00%§!\n\n"
+  SCA_The_Fair_Meal_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDivision Recovery Rate: §G+5.00%§!"
+  SCA_The_Non_discrimination_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nRecruitable Population: §Y2.00%§!"
+  SCA_The_Equal_Rewards_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nConsumer Goods Factories: §Y-3.00%§!"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -537,6 +544,30 @@
 
   SCA_All_For_The_Cause:0 "All For The Cause"
   SCA_All_For_The_Cause_desc:0 ""
+
+  SCA_Semper_Tyrannis:0 "Semper Tyrannis"
+  SCA_Semper_Tyrannis_desc:0 ""
+
+  SCA_Emphasize_The_American_Struggle:0 "Emphasize The American Struggle"
+  SCA_Emphasize_The_American_Struggle_desc:0 ""
+
+  SCA_Revolution_No_Matter_The_Cost:0 "Revolution No Matter The Cost"
+  SCA_Revolution_No_Matter_The_Cost_desc:0 ""
+
+  SCA_Honourable_Liberators:0 "Honourable Liberators"
+  SCA_Honourable_Liberators_desc:0 ""
+
+  SCA_Late_Night_House_Calls:0 "Late Night House Calls"
+  SCA_Late_Night_House_Calls_desc:0 ""
+
+  SCA_The_Red_Patriot:0 "The Red Patriot"
+  SCA_The_Red_Patriot_desc:0 ""
+
+  SCA_Burn_Their_Fields:0 "Burn Their Fields"
+  SCA_Burn_Their_Fields_desc:0 ""
+
+  SCA_The_Mississippi_Incident:0 "The Mississippi Incident"
+  SCA_The_Mississippi_Incident_desc:0 ""
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
