VPS for Greece, Turkey and Kurdistan

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -806,7 +806,7 @@
  VICTORY_POINTS_10582:0 "Salt Lake City"
  VICTORY_POINTS_12721:0 "Ciudad Victoria"
  VICTORY_POINTS_9637:0 "Monterrey de California"
- VICTORY_POINTS_11905:0 "Dedeagatsch"
+ VICTORY_POINTS_11905:0 "Alexandroupolis"
  VICTORY_POINTS_10535:0 "Boomtown"
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_575:0 "Dunkirk"
@@ -905,5 +905,21 @@
  VICTORY_POINTS_11446:0 "Brighton"  
  VICTORY_POINTS_13070:0 "Medway"
  VICTORY_POINTS_507:0 "Surrey"
+ VICTORY_POINTS_11853:0 "Erzurum"
+ VICTORY_POINTS_6935:0 "Van"
+ VICTORY_POINTS_9777:0 "Sivas"
+ VICTORY_POINTS_10056:0 "Mersin"
+ VICTORY_POINTS_9878:0 "Afyon"
+ VICTORY_POINTS_3951:0 "Eskisehir"
+ VICTORY_POINTS_3870:0 "Kayseri"
+ VICTORY_POINTS_11894:0 "Samsun"
+ VICTORY_POINTS_6938:0 "Kastamonu"
+ VICTORY_POINTS_10041:0 "Denizli"
+ VICTORY_POINTS_10038:0 "Aydin"
+ VICTORY_POINTS_10122:0 "Marmaris"
+ VICTORY_POINTS_11778:0 "Balikesir"
+ VICTORY_POINTS_1606:0 "Ar-Raqqa"
+ VICTORY_POINTS_7620:0 "Malatya"
+ VICTORY_POINTS_9663:0 "Sotschi"
 
 
