--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -921,5 +921,24 @@
  VICTORY_POINTS_1606:0 "Ar-Raqqa"
  VICTORY_POINTS_7620:0 "Malatya"
  VICTORY_POINTS_9663:0 "Sotschi"
-
+ VICTORY_POINTS_3585:0 "Karlsbad"
+ VICTORY_POINTS_9541:0 "České Budějovice"
+ VICTORY_POINTS_11401:0 "Reichenberg"
+ VICTORY_POINTS_583:0 "Pardubice"
+ VICTORY_POINTS_6562:0 "Olomouc"
+ VICTORY_POINTS_279:0 "Bromberg"
+ VICTORY_POINTS_382:0 "Kaluga"
+ VICTORY_POINTS_3492:0 "Belgorod"
+ VICTORY_POINTS_11476:0 "Millerowo"
+ VICTORY_POINTS_6724:0 "Simferopol"
+ VICTORY_POINTS_737:0 "Kljutschewoje"
+ VICTORY_POINTS_9729:0 "Melitopol"
+ VICTORY_POINTS_11691:0 "Uschgorod"
+ VICTORY_POINTS_11411:0 "Stanisławów"
+ VICTORY_POINTS_462:0 "Chmelnizki"
+ VICTORY_POINTS_11427:0 "Tarnopol"
+ VICTORY_POINTS_11543:0 "Rowno"
+ VICTORY_POINTS_3581:0 "Eperjes"
+ VICTORY_POINTS_11539:0 "Besztercebánya"
+ VICTORY_POINTS_6416:0 "Kielce"
 
