--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -263,6 +263,8 @@
   PB_GER_Europe_Fond_Cost:0 "The Europe Fond"
   PB_GER_Europe_Political_Autonomy:0 "European Countries Council"
 
+  PB_French_Help:0 "Rebuilding France"
+
   ##########################
   # FOCUSES
   ##########################
