--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -152,12 +152,59 @@
   COE.25.a:0 "Divide along the east and the west"
   COE.25.b:0 "Destroy the concept of Spain"
 
+  COE.30.t:0 "Conference of Europe: Italy"
+  COE.30.d:0 "-"
+  COE.30.a:0 "Let's get to work"
+  COE.31.t:0 "Conference of Europe: Cavour Plan"
+  COE.31.d:0 "Named after the old Count of Cavour, Camillo Benso, who opposed Italian unification under the Bourbons of the Two Sicilies, the Cavour Plan is the topic of debate that is raging through Palace het Loo. Few if any representatives are truly sure what to do with the Italian peninsula after its turn against the League of Nations and its support for French aggression. Many British diplomats argue that the support for France was unnatural, forced by French intervention and not a true expression of Italy's desire during the war. The nation was basically a hostage, forced by Paris to do its bidding. A few German representatives and the diplomats hailing from the Balkan nations disagree heavily with this assesement. \n\nThe opposition thus proposed the Cavour Plan, seeking to end the Italian project and dissolve the nation back into its original nation-states. A less aggressive version of the plan simply divides the nation into two blocs, a northern kingdom under German influence and a southern kingdom that is subject to British interests. Most British diplomats are, however, not keen on dividing the kingdom and still support lesser punishements for Italy than the dissolution of their nation."
+  COE.31.a:0 "Italy may stay like it is..."
+  COE.31.b:0 "Introduce the soft Cavour Plan"
+  COE.31.c:0 "Approve of the hard Cavour Plan"
+  COE.32.t:0 "Conference of Europe: Monaco's Place in the World"
+  COE.32.d:0 "An extremely tiny issue has come over the table in the Loo. Monaco, a small principality on the coast of the Mediterranean, was in some forms an initial victim of Italian aggression. The occupation of the small city state has led some to believe that it is better for Europe and for the future to grant Monaco the surrounding area of Nice, bolstering the small state a bit in the face of any future conflict. Opponents of the plan have been sceptical about the proposed expansion of Monaco, with a select few even accussing the proposing diplomat of having personal stakes in Monaco's banking system. He, of course, has fervently denied such accusations."
+  COE.32.a:0 "Why are we even talking about Monaco?"
+  COE.32.b:0 "Brilliant! Expand Monaco at once!" 
+  COE.33.t:0 "Conference of Europe: Aosta Valley"
+  COE.33.d:0 "The Aosta Valley has been a point contention between Italy and France since Italian unification, with both countries claiming the region as an inherent part of their country. The region's dubious place in international politics has thus attracted the attention of the League and an answer is needed if peace is to be preserved. Possible candidates for the region range from the two claiming nations to Switzerland as a neutral state between France and Italy. Whoever we may give the region, we should be willing to enforce their claim in the case of future conflict."
+  COE.33.a:0 "Grant it to the Swiss"
+  COE.33.b:0 "Grant it to the Occitans"
+  COE.33.c:0 "Grant it to the French"
+  COE.33.e:0 "Grant it to the Italians"
+  COE.33.f:0 "Grant it to the North Italians" 
+
+
+  COE.41.t:0 "Conference of Europe: Forming a Polish State"
+  COE.41.d:0 "With the liberation of the Polish people, decisions need to be made about the future of this group of people which has been oppressed for so long. An independent Polish state is in the cards, but the exact form of government remains unclear. Choices are mainly between installing a king and granting the Polish another chance at monarchism or allowing the formation of an independent republic of Poland."
+  COE.41.a:0 "Hail to the Polish Republic!"
+  COE.41.b:0 "Long live a Polish King!" 
+  COE.42.t:0 "The Next King of Poland?"
+  COE.42.d:0 "With the selection of a parliamentary monarchy as government form, Poland still needs to answer one question: which monarch will become the figurehead of the Polish people? A real Polish line has become lacking this decade, with many old Polish aristocrats dying out during the wars. Mainly foreign options remain and both Britain and Germany are eager to present their picks for an individual fit for the Polish crown."
+  COE.42.a:0 "Georg of Saxony will lead the Poles"
+  COE.42.b:0 "-"
+  COE.43.t:0 "First Polish Parliamentary Election"
+  COE.43.d:0 "As the Sjem, the parliament of Polish democracy, is being build in the former Russian palace of Warsaw, the ballot-boxes have been put in place for the first election. Young parties have popped up out of the anti-Russian resistance cells that once fought for Polish independence, all split on their specific ideological views on Poland's future. The most prominent of these groups is the ghost of Galicia himself, Józef Piłsudski, leader of the revolutionary agrarian party, despite his sickness. His reputation has become the status of legends among Polish partisans, as Piłsudski's raids from Hungary into Galicia against Russian outposts kept morale high in the independence movement. Across from the Galician ghost stands a similar, though lesser known, figure: Eligiusz Niewiadomski. Having taken over control of the National Democrats after the death of Roman Dmowski in '32 at the hands of the Russians, Niewiadomski also operated in Galicia as a smuggler of nationalist propaganda. His ideology, however, turns him into a staunch opponent of Pilsudski's revolutionary ideas, with Niewiadomski promoting anti-anarchism, christian nationalism and anti-Jewish legislation. \n\nKeeping these fringes in check are both the liberals and the conservatives, which both seem to shape Polish politics into a two party plus system. The liberal Peasants Party of Gabriel J. Narutowicz and the Republican Union of Stanisław Grabski are shaping up to become the main competitors of this election, but it remains uncertain if they can keep the fringes from making a surprising victory in this first election."
+  COE.43.a:0 "Pilsudski leads Poland to the future!"
+  COE.43.b:0 "Naruotwicz brings prosperity and normalcy with him!"
+  COE.43.c:0 "Grabski keeps the boat from rocking!"
+  COE.43.e:0 "Niewiadomski promises a new Poland!"
   COE.44.t:0 "Conference of Europe: Polish-Ruthenian Border"
   COE.44.d:0 "The border between the two new states of Poland and Belarus have been a topic of furious debate. With the unclear ethnic diversity of the region as a result of years and years of Russian interference, there is no clear border to be drawn that will appease every community. The Polish delegation and Belarussian delegation have thus drawn up two proposals: \n\nBelarus has proposed that, if they're forced to cede territory, that it would depart with its Russopolish majority regions. The delegation states that Poland has only a legitimate claim to this region of Belarus, as it holds a majority of people that are close to the Polish culture and community instead of the Belarussian one. \n\nThe Polish delegation, spurred on by nationalists at home, have proposed a rather radical option, which forces Belarus to cede its Russopolish parts and the Wilno-Vilnius region. Despite these parts housing a Belarussian majority, the Polish delegation claims the territory as historically important to Poland. \n\nWith which plan do we go?"
   COE.44.a:0 "Adopt the Belarussian Plan"
   COE.44.b:0 "The Belarussian Plan, but fix the Vilnius Situation"
   COE.44.c:0 "Adopt the Polish Plan"
-  
+  COE.45.t:0 "Conference of Europe: East Prussia"
+  COE.45.d:0 "East Prussia isn't really German, despite its similarities. The uniquely Prussian culture of the region has given the region a bad reputation in the United Kingdom of Germany as a backwards place, holding backwards ideas and having a backwards culture of junkers and slaves. Poland, on the other hand, has an inherent interest in the region due to the Polish population that it houses and housed before the previous regime's population transfer policies and the connection to the sea East Prussia promises. Several proposals have been made, but it remains unclear what the best course of action is."
+  COE.45.a:0 "We will keep the region German for now..."
+  COE.45.b:0 "Grant the Poles the Gdansk Corridor"
+  COE.45.c:0 "We'll only hold onto Koningsberg, the Poles can have the rest"
+  COE.46.t:0 "Conference of Europe: A Baltic Referendum"
+  COE.46.d:0 "The Baltics have been Russian for a similar amount of time as the Polish, but have faced a larger share of the Russofication policy under the Empire. large swathes of Estonia, Latvia and Lithuania now talk Russian and are more loyal to Moscow than to any Baltic state. Their situation isn't the only precarious thing, as the Baltic union that we've temporarily set up is also fairing badly. A referendum is thus planned to be held in the next few months, which will clear up the will of the Baltic people and how they want to continue through history."
+  COE.46.a:0 "May they vote wisely!" 
+  COE.49.t:0 "Conference of Europe: Memel"
+  COE.49.d:0 "This slip of land between Prussia and Lithuania, named after the river of the same name, is a wanted piece of land in Eastern Europe. The Lithuanian states of the past have often claimed the small strip as ancestral Lithuanian lands, while Germans in the region have often sought to control the strip of land for their own benefit, like the Teutonic order or other christian warriors of old. Now, however, the strip of land is mainly important for its symbolic value. Shall we grant this strip to the Lithuanians or give it to the Germans?"
+  COE.49.a:0 "Lithuania has a just claim to Memel"
+  COE.49.b:0 "Germany can better protect this land"
+  COE.49.c:0 "Poland-Lithuania has a clear historical claim"
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
@@ -183,32 +230,46 @@
 
   #Cosmetics
 
+  MOD:0 "Duchy of Modena"
+  MOD_DEF:0 "the Duchy of Modena and Reggio"
+  MOD_ADJ:0 "Modenesi"
+  MOD_jc:0 "Republic of Modena"
+  MOD_jc_DEF:0 "the Cispladine Republic of Modena"
+
+  TUS:0 "Kingdom of Tuscany"
+  TUS_DEF:0 "the Kingdom of Tuscany"
+  TUS_ADJ:0 "Tuscan"
+  TUS_jc:0 "Republic of Pisa"
+  TUS_jc_DEF:0 "the Republic of Pisa"
+  TUS_ss:0 "Republic of Pisa"
+  TUS_ss_DEF:0 "the Republic of Pisa"
+
   GER_FRANCIA:0 "Francia"
   GER_FRANCIA_ADJ:0 "Francian"
-  GER_FRANCIA_DEF:0 "The United Kingdoms of Francia"
+  GER_FRANCIA_DEF:0 "the United Kingdoms of Francia"
 
   NRM_GERMAN:0 "Kingdom of Normandy"
   NRM_GERMAN_ADJ:0 "Normandian"
-  NRM_GERMAN_DEF:0 "The Kingdom of Normandy"
+  NRM_GERMAN_DEF:0 "the Kingdom of Normandy"
 
   NRM_REPUBLIC:0 "Republic of Normandy"
   NRM_REPUBLIC_ADJ:0 "Normandian"
-  NRM_REPUBLIC_DEF:0 "The Republic of Normandy"
+  NRM_REPUBLIC_DEF:0 "the Republic of Normandy"
 
   SYR_TUR_Puppet:0 "Syrian Vilayet"
   SYR_TUR_Puppet_ADJ:0 "Syrian"
-  SYR_TUR_Puppet_DEF:0 "The Ottoman Vilayet of Syria" 
+  SYR_TUR_Puppet_DEF:0 "the Ottoman Vilayet of Syria" 
 
   COR_ENG_PUPPET:0 "Protectorate of Corsica"
-  COR_ENG_PUPPET_DEF:0 "The British Protectorate of Corsica"
+  COR_ENG_PUPPET_DEF:0 "the British Protectorate of Corsica"
   COR_ENG_PUPPET_ADJ:0 "Corsican"
 
   OFA_REPUBLIC:0 "Republic of France"
-  OFA_REPUBLIC_DEF:0 "The Republic of France"
+  OFA_REPUBLIC_DEF:0 "the Republic of France"
   OFA_REPUBLIC_ADJ:0 "French"
 
   OFA_KINGDOM:0 "Kingdom of France"
-  OFA_KINGDOM_DEF:0 "The Kingdom of France"
+  OFA_KINGDOM_DEF:0 "the Kingdom of France"
   OFA_KINGDOM_ADJ:0 "French"
 
   POL_REPUBLIC:0 "Republic of Poland"
@@ -228,7 +289,7 @@
   POL_MONARCHY_SWE_ADJ:0 "Polish"
 
   POL_Commonwealth:0 "Polish-Lithuanian Commonwealth"
-  POL_Commonwealth_DEF:0 "The Polish-Lithuanian Commonwealth"
+  POL_Commonwealth_DEF:0 "the Polish-Lithuanian Commonwealth"
   POL_Commonwealth_ADJ:0 "Polish-Lithuanian"
 
   POL_Intermarium:0 "Międzymorze Federation"
